# bci

./: pyproject.toml
paper/eegnet/examples/: EEGModels.py  ERP.py  introduce.ipynb
